--- a/rome-modules/src/main/resources/rome.properties
+++ b/rome-modules/src/main/resources/rome.properties
@@ -49,14 +49,15 @@ rss_2.0.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 \
     com.rometools.modules.mediarss.io.AlternateMediaModuleParser \
     com.rometools.modules.sle.io.ItemParser \
     com.rometools.modules.yahooweather.io.WeatherModuleParser \
-    com.rometools.modules.psc.io.PodloveSimpleChapterParser
+    com.rometools.modules.psc.io.PodloveSimpleChapterParser \
+    com.rometools.modules.bitlove.io.BitloveParser
 
 rss_1.0.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS1 \
     com.rometools.modules.base.io.GoogleBaseParser \
     com.rometools.modules.base.io.CustomTagParser \
     com.rometools.modules.content.io.ContentModuleParser \
     com.rometools.modules.slash.io.SlashModuleParser \
-    com.rometools.modules.psc.io.PodloveSimpleChapterParser
+    com.rometools.modules.psc.io.PodloveSimpleChapterParser 
 
 atom_0.3.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 \
     com.rometools.modules.base.io.GoogleBaseParser \
@@ -68,7 +69,8 @@ atom_0.3.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 
     com.rometools.modules.photocast.io.Parser \
     com.rometools.modules.mediarss.io.MediaModuleParser \
     com.rometools.modules.mediarss.io.AlternateMediaModuleParser \
-    com.rometools.modules.psc.io.PodloveSimpleChapterParser
+    com.rometools.modules.psc.io.PodloveSimpleChapterParser \
+    com.rometools.modules.bitlove.io.BitloveParser
 
 atom_1.0.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 \
     com.rometools.modules.base.io.GoogleBaseParser \
@@ -81,7 +83,8 @@ atom_1.0.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 
     com.rometools.modules.mediarss.io.MediaModuleParser \
     com.rometools.modules.mediarss.io.AlternateMediaModuleParser \
     com.rometools.modules.thr.io.ThreadingModuleParser \
-    com.rometools.modules.psc.io.PodloveSimpleChapterParser
+    com.rometools.modules.psc.io.PodloveSimpleChapterParser \
+    com.rometools.modules.bitlove.io.BitloveParser
 
 rss_2.0.feed.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenerator \
     com.rometools.modules.content.io.ContentModuleGenerator \
@@ -123,7 +126,8 @@ rss_2.0.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenerat
     com.rometools.modules.photocast.io.Generator \
     com.rometools.modules.mediarss.io.MediaModuleGenerator \
     com.rometools.modules.atom.io.AtomModuleGenerator \
-    com.rometools.modules.yahooweather.io.WeatherModuleGenerator
+    com.rometools.modules.yahooweather.io.WeatherModuleGenerator \
+    com.rometools.modules.bitlove.io.BitloveGenerator
 
 rss_1.0.item.ModuleGenerator.classes=com.rometools.modules.base.io.GoogleBaseGenerator \
     com.rometools.modules.content.io.ContentModuleGenerator \
@@ -139,7 +143,8 @@ atom_0.3.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenera
     com.rometools.modules.georss.W3CGeoGenerator \
     com.rometools.modules.photocast.io.Generator \
     com.rometools.modules.mediarss.io.MediaModuleGenerator \
-    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator
+    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator \
+    com.rometools.modules.bitlove.io.BitloveGenerator
 
 atom_1.0.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenerator \
     com.rometools.modules.base.io.CustomTagGenerator \
@@ -150,7 +155,8 @@ atom_1.0.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenera
     com.rometools.modules.photocast.io.Generator \
     com.rometools.modules.mediarss.io.MediaModuleGenerator \
     com.rometools.modules.thr.io.ThreadingModuleGenerator \
-    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator
+    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator \
+    com.rometools.modules.bitlove.io.BitloveGenerator
 
 rss_2.0wNS.feed.ModuleParser.classes=com.rometools.modules.mediarss.io.MediaModuleParser
 rss_2.0wNS.item.ModuleParser.classes=com.rometools.modules.mediarss.io.MediaModuleParser
