Enable the Bitlove module only for RSS 2.0 and Atom 1.0 feeds, since it is intended for items/entries of podcast feeds

--- a/rome-modules/src/main/resources/rome.properties
+++ b/rome-modules/src/main/resources/rome.properties
@@ -69,8 +69,7 @@ atom_0.3.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 
     com.rometools.modules.photocast.io.Parser \
     com.rometools.modules.mediarss.io.MediaModuleParser \
     com.rometools.modules.mediarss.io.AlternateMediaModuleParser \
-    com.rometools.modules.psc.io.PodloveSimpleChapterParser \
-    com.rometools.modules.bitlove.io.BitloveParser
+    com.rometools.modules.psc.io.PodloveSimpleChapterParser
 
 atom_1.0.item.ModuleParser.classes=com.rometools.modules.cc.io.ModuleParserRSS2 \
     com.rometools.modules.base.io.GoogleBaseParser \
@@ -143,8 +142,7 @@ atom_0.3.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenera
     com.rometools.modules.georss.W3CGeoGenerator \
     com.rometools.modules.photocast.io.Generator \
     com.rometools.modules.mediarss.io.MediaModuleGenerator \
-    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator \
-    com.rometools.modules.bitlove.io.BitloveGenerator
+    com.rometools.modules.psc.io.PodloveSimpleChapterGenerator
 
 atom_1.0.item.ModuleGenerator.classes=com.rometools.modules.cc.io.CCModuleGenerator \
     com.rometools.modules.base.io.CustomTagGenerator \
